background color fixed

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
             <p>Host</p>
             <p class="su-btn">Subscribe</p>
         </div>
+        <div class="hero-content">
+            <div class="circle">
+                <img src="image/hero-circle.png" alt="">
+            </div>
+        </div>
         <span>
             <i class="fa-solid fa-bars"></i>
         </span>
