--- a/index.html
+++ b/index.html
@@ -15,14 +15,22 @@
             <p>Host</p>
             <p class="su-btn">Subscribe</p>
         </div>
+        </div>
+    </nav>
+    <section>
+        <div class="banner-container">
+            <h1 class="logo">TechWave</h1>
+            <p>Your daily dose of tech insights, productivity hacks, and personal growth</p>
+            <div class="btn-container">
         <div class="hero-content">
+                <button>Listen On Sportify</button>
+                <button>Subscribe</button>
+            </div>
             <div class="circle">
                 <img src="image/hero-circle.png" alt="">
             </div>
         </div>
-        <span>
-            <i class="fa-solid fa-bars"></i>
-        </span>
-    </nav>
+    </section>
+
 </body>
 </html>
